Fix overflow for long words

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -431,6 +431,7 @@ footer p {
 
 section .post {
     padding: 2.5rem;
+    overflow-wrap: break-word;
     border-bottom-style: solid;
     border-bottom-width: 1px;
     border-bottom-color: var(--border-primary-color);
